--- a/src/Styles/Helpers/_variables.scss
+++ b/src/Styles/Helpers/_variables.scss
@@ -70,41 +70,8 @@ $white: #ffffff;
 $black: #000000;
 $bodyCopy: #212121;
 $primaryColor: #49A942;
-$primaryColorAlpha07: #FEC8C8;
+$primaryColorAlpha07: #49a94267;
 $secondaryColor: #33632E;
-$acentColor: #FA4747;
-$lightGray: #f3f3f3;
-$lightGray2: #E6F2DF;
-$blueColor: #006EAD;
-$gradient1: linear-gradient(90deg, #E8F4E4 0%, #FFF 48.5%, #EDF2F3 100%);
-$gradient2: linear-gradient(90deg, #2C6D3C 0%, #6CC04A 100%);
-$lightGrayAlt2: #f5f5f5;
-$lightGrayAlt3: #ECEFF0;
-$blackOpacity: rgba(0, 0, 0, 0.10);
-$blackOpacity4: rgba(0, 0, 0, 0.04);
-$blackOpacity6: rgba(0, 0, 0, 0.06);
-$blackOpacity16: rgba(0, 0, 0, 0.16);
-$whiteOpacity: rgba(255, 255, 255, 0.50);
-$whiteOpacity2: rgba(255, 255, 255, 0.20);
-$textShadow: 0px 4px 4px rgba(0, 0, 0, 0.22);
-$boxShadow:  0px 0px 4px 0px rgba(0, 0, 0, 0.04), 0px 8px 16px 0px rgba(0, 0, 0, 0.08);
-
-$grayBG: #F7F7F7;
-$bodyCopyAlt: #212224;
-$blackAlt: #4D4D4F;
-$blackAlt2:  #58595B;
-$greyAlt2: #D8D8D8;
-$bodyCopyAlt3: #2B2B2B;
-$lightGray: #f3f3f3;
-$grey: #C3C2D1;
-$greyAlt: #C5C5C5;
-$lightGrayAlt: #f2f2f2;
+$acentColor: rgba(255, 255, 255, 0.30);;
 $bdr: #BDBDBD;
-$isiBodyCopy: rgba(22, 22, 22, 0.80);
-$diclaimerText: rgba(17, 17, 17, 0.80);
-$isiBorder: #49A942;
-$footerLinks: #111111;
-$graphBg: #F6FBF6;
 $logoBdr: #E8E8E8;
-$chartBg: #FDD3D1;
-$blackAlpha75: rgba(0, 0, 0, 0.75);
