--- a/src/Components/Layouts/Header/Header.scss
+++ b/src/Components/Layouts/Header/Header.scss
@@ -1,7 +1,7 @@
 .header {
     display: none;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     width: 100%;
     z-index: 99;
   
@@ -10,7 +10,6 @@
     }
   
     li {
-      margin-left: 24px;
       max-width: 255px;
       &:nth-child(3){
         max-width: 298px;
@@ -26,7 +25,7 @@
         color: $black;
         display: inline-block;
         line-height: $lineHeight120;
-        padding-left: 46px;
+        margin-left: 53px;
         min-height: 32px;
         vertical-align: middle;
         display: flex;
@@ -34,6 +33,38 @@
         &.active, &:hover {
           color: $primaryColor;
           text-decoration: none;
+          border-bottom: 1px solid $secondaryColor;
+          padding-bottom: 3px;
+        }
+
+        .pdfIcon {
+          background: url("../../../Assets/Img/icons/icon-pdf.svg");
+          width: 16px;
+          height: 18px;
+          margin-right: 10px;
+        }
+      }
+
+      &:nth-of-type(1) {
+        a {
+          margin-left: 0;
+        }
+      }
+      &:nth-of-type(4) {
+        margin-left: 463px;
+        
+        @include media('<=mediumDesktop') {
+          margin-left: 42.5%;
+        }
+        @include media('<=smallDesktop') {
+          margin-left: 27.5%;
+        }
+        
+        @include media('<=bigTabletMedium') {
+          margin-left: 30.5%;
+        }
+        a {
+          margin-left: 0;
         }
       }
     }
@@ -61,18 +92,20 @@
       position: absolute;
       width: 100%;
       height: auto;
-      top: 49px;
+      top: 62px;
       right: 0;
       z-index: 100;
       padding: 0;
       opacity: 0;
       pointer-events: none;
       transition: all 0.25s ease-in-out;
+
+      @include media('>tablet', '<bigTabletMedium'){
+        top: 78px;
+      }
+
       @include media('>=bigTabletMedium') {
         display: none;
-      }
-      @include media('>tablet', '<=bigTablet'){
-        top: 59px;
       }
   
       &--open {
@@ -87,25 +120,25 @@
       }
       .menu-overlay{
         position: fixed;
-        top: 76px;
+        top: 100px;
         left: 0;
         width: 100%;
         height: 100%;
         background: rgba(0, 0, 0, 0.45);
         content: '';
-        @include media('>tablet', '<=bigTablet'){
-          top: 100px;
+        @include media('>tablet', '<bigTabletMedium'){
+          top: 122px;
         }
-        @include media('>=mediumDesktop'){
-          top: 120px;
-        }
+        // @include media('>=mediumDesktop'){
+        //   top: 120px;
+        // }
       }
     }
   
     &__dropdown {
       list-style-type: none;
       text-align: center;
-      background: $bodyCopy;
+      background: $secondaryColor;
       box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.12) inset;
       position: relative;
       z-index: 9;
@@ -128,6 +161,12 @@
           justify-content: center;
           &:hover{
             text-decoration: none;
+          }
+          .pdfIcon {
+            background: url("../../../Assets/Img/icons/icon-pdf-mobile.svg");
+            width: 16px;
+            height: 18px;
+            margin-right: 10px;
           }
         }
   
@@ -155,16 +194,17 @@
     right: 0;
     margin: 0 auto;
     background: $white;
-    padding: 8px 16px;
+    padding: 5px 16px;
     display: flex;
     align-items: center;
   
     @include media ('>tablet') {
-      top: 34px;
-      padding: 21px 24px;
+      top: 44px;
+      padding: 4px 24px;
     }
   
     &__left {
+      margin-right: 47px;
       img {
         width: 91px;
         height: 46px;
@@ -175,31 +215,37 @@
       }
       // max-width: 125px;
       // width: 100%;
-
-      @include media('>=smallDesktop'){
-        margin-right: 10px;
-      }
-      @include media('>=mediumDesktop'){
-        margin-right: 80px;
-      }
     }
   
     &__right {
-  
+      .primary {
+        color: $primaryColor;
+      }
       @include media ('>=tablet') {
         display: flex;
         align-items: center;
         justify-content: space-between;
         width: 100%;
       }
+
+      @include media('>=bigTabletMedium') {
+        border-left: 2px solid $logoBdr;
+        height: 48px;
+        padding-left: 47px;
+      }
   
       a {
-        
         &:hover {
           text-decoration: underline;
           text-decoration-color: $secondaryColor;
           text-underline-offset: 5px;
         }
+      }
+
+      .menu {
+        width: 100%;
+
+       
       }
     }
   }
