Hero Section made dynamic and responsive

--- a/src/Components/Blocks/Hero/Hero.html
+++ b/src/Components/Blocks/Hero/Hero.html
@@ -1,3 +1,7 @@
 <div class="hero">
-    
+    <div class="hero__text">
+        <p class="title" v-html="heroData.title"></p>
+        <p class="des" v-html="heroData.des"></p>
+    </div>
+    <img src="../../../Assets/Img/hero/hero-background-people.png" alt="people" class="people">
 </div>
