--- a/src/Components/Blocks/Hero/Hero.scss
+++ b/src/Components/Blocks/Hero/Hero.scss
@@ -3,4 +3,122 @@
     height: 264px;
     position: relative;
     background: url('../../../Assets/Img/hero/hero-background-lg.jpg') no-repeat;
+
+    @include media('<tablet') {
+        height: 230px;
+    }
+    @include media('<=smallPhone') {
+        height: auto;
+        background: url('../../../Assets/Img/hero/hero-background-sm.jpg') no-repeat;
+        background-size: cover;
+        padding-top: 55px;
+    }
+
+    .people {
+        position: absolute;
+        bottom: 0;
+        right: 59px;
+        width: 25%;
+
+        @include media('<smallDesktop') {
+            width: 26%;
+        }
+        @include media('<bigTabletMedium') {
+            width: 29%;
+        }
+        @include media('<tablet') {
+            width: 30%;
+            right: 39px;
+        }
+        @include media('<=phone') {
+            width: 34%;
+            right: 10px;
+        }
+        // @include media('<=smallPhone') {
+        //     width: 100%;
+        //     right: 15px;
+        // }
+        @include media('<=smallPhone') {
+            position: static;
+            width: 95%;
+            margin-bottom: -6px;
+            margin-right: 15px;
+        }
+    }
+
+    &__text {
+        position: absolute;
+        top: 55px;
+        left: 0;
+        max-width: 586px;
+
+        @include media('<tablet') {
+            max-width: 486px;
+        }
+        @include media('<=phone') {
+            max-width: 386px;
+        }
+        // @include media('<=smallPhone') {
+        //     max-width: 90%;
+        // }
+        @include media('<=smallPhone') {
+            max-width: 99%;
+            position: static;
+            margin-bottom: 15px;
+        }
+
+        .title {
+            color: $white;
+            font-size: $fontSize35;
+            font-weight: $fontWeightBold;
+            line-height: $lineHeight145;
+            padding: 13px 84.5px 13px 49px;
+            border-radius: 0px 10px 10px 0px;
+            background: $primaryColor;
+            box-shadow: $textShadow;
+            margin-bottom: 21px;
+            width: auto;
+
+            @include media('<tablet') {
+                font-size: $fontSize30;
+                padding: 10px 64.5px 10px 35px;
+                margin-bottom: 18px;
+            }
+            @include media('<=phone') {
+                font-size: $fontSize24;
+                padding: 6px 34.5px 6px 15px;
+                margin-bottom: 10px;
+            }
+            @include media('<=smallPhone') {
+                padding: 10px 17px 17px;
+                margin-bottom: 16px;
+                line-height: $lineHeight33;
+                max-width: 345px;
+            }
+        }
+    
+        .des {
+            color: $white;
+            font-size: $fontSize24;
+            font-weight: $fontWeightBold;
+            line-height: $lineHeight130;
+            max-width: 569px;
+            margin-left: 48px;
+
+            @include media('<tablet') {
+                font-size: $fontSize20;
+                max-width: 460px;
+                margin-left: 28px;
+            }
+            @include media('<=phone') {
+                font-size: $fontSize18;
+                max-width: 350px;
+                margin-left: 18px;
+            }
+            @include media('<=smallPhone') {
+                font-size: $fontSize20;
+                max-width: 90%;
+            }
+        }
+    }
 }
