--- a/src/Styles/Helpers/_variables.scss
+++ b/src/Styles/Helpers/_variables.scss
@@ -72,6 +72,7 @@ $bodyCopy: #212121;
 $primaryColor: #49A942;
 $primaryColorAlpha07: #49a94267;
 $secondaryColor: #33632E;
-$acentColor: rgba(255, 255, 255, 0.30);;
+$acentColor: rgba(255, 255, 255, 0.30);
 $bdr: #BDBDBD;
 $logoBdr: #E8E8E8;
+$textShadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.25);
