data added to home.vue, minor style changes, html tags updated

--- a/src/Components/Blocks/ACR/ACR.html
+++ b/src/Components/Blocks/ACR/ACR.html
@@ -1,19 +1,5 @@
 <div id="ACR">
-    <p>Hellow from ACR</p>
-    <p>Hellow from ACR</p>
-    <p>Hellow from ACR</p>
-    <p>Hellow from ACR</p>
-    <p>Hellow from ACR</p>
-    <p>Hellow from ACR</p>
-    <p>Hellow from ACR</p>
-    <p>Hellow from ACR</p>
-    <p>Hellow from ACR</p>
-    <p>Hellow from ACR</p>
-    <p>Hellow from ACR</p>
-    <p>Hellow from ACR</p>
-    <p>Hellow from ACR</p>
-    <p>Hellow from ACR</p>
-    <p>Hellow from ACR</p>
-    <p>Hellow from ACR</p>
-    <p>Hellow from ACR</p>
+    <div class="contentWrap">
+        <h2 class="title"><span class="title__arrow"></span><span class="title__text" v-html="acrData.title"></span></h2>
+    </div>
 </div>
