--- a/src/Components/Blocks/ACR/ACR.scss
+++ b/src/Components/Blocks/ACR/ACR.scss
@@ -1,7 +1,5 @@
 #ACR {
-    padding: 20px;
-    background-color: $black;
-    p{
-        color: $white
-    }
+    padding: 25px 0 28px;
+    background-color: $white;
+    border-bottom: 2px solid $primaryColor;
 }
