--- a/src/Components/Blocks/Access/Access.html
+++ b/src/Components/Blocks/Access/Access.html
@@ -1,19 +1,6 @@
 <div id="Access">
-    <p>Hellow from Access</p>
-    <p>Hellow from Access</p>
-    <p>Hellow from Access</p>
-    <p>Hellow from Access</p>
-    <p>Hellow from Access</p>
-    <p>Hellow from Access</p>
-    <p>Hellow from Access</p>
-    <p>Hellow from Access</p>
-    <p>Hellow from Access</p>
-    <p>Hellow from Access</p>
-    <p>Hellow from Access</p>
-    <p>Hellow from Access</p>
-    <p>Hellow from Access</p>
-    <p>Hellow from Access</p>
-    <p>Hellow from Access</p>
-    <p>Hellow from Access</p>
-    <p>Hellow from Access</p>
+    <div class="contentWrap">
+        <h2 class="title"><span class="title__arrow"></span><span class="title__text" v-html="accessData.title"></span></h2>
+        <h3 class="subTitle" v-html="accessData.subTitle"></h3>
+    </div>
 </div>
