--- a/src/Components/Blocks/Access/Access.scss
+++ b/src/Components/Blocks/Access/Access.scss
@@ -1,7 +1,4 @@
 #Access {
-    padding: 20px;
-    background-color: $primaryColor;
-    p{
-        color: $white;
-    }
+    padding: 23px 0 23px;
+    background-color: $white;
 }
