--- a/src/Styles/Helpers/_variables.scss
+++ b/src/Styles/Helpers/_variables.scss
@@ -56,6 +56,7 @@ $lineHeight18: 18px;
 $lineHeight22: 22px;
 $lineHeight23: 23px;
 $lineHeight24: 24px;
+$lineHeight30: 30px;
 $lineHeight33: 33px;
 $lineHeight36: 36px;
 $lineHeight100: 100%;
@@ -73,6 +74,7 @@ $primaryColor: #49A942;
 $primaryColorAlpha07: #49a94267;
 $secondaryColor: #33632E;
 $acentColor: rgba(255, 255, 255, 0.30);
+$sectionBg: rgba(73, 169, 66, 0.05);
 $bdr: #BDBDBD;
 $logoBdr: #E8E8E8;
 $textShadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.25);
