--- a/src/Views/Home.html
+++ b/src/Views/Home.html
@@ -1,6 +1,6 @@
 <div class="home pageWrapper">
     <HeroSection :heroData="hero.heroData" />
-    <ACR />
-    <Joint />
-    <Access />
+    <ACR :acrData="acr.acrData" />
+    <Joint :jointData="joint.jointData" />
+    <Access :accessData="access.accessData" />
 </div>
