--- a/src/Components/Blocks/Hero/Hero.html
+++ b/src/Components/Blocks/Hero/Hero.html
@@ -1,6 +1,6 @@
 <div class="hero">
     <div class="hero__text">
-        <p class="title" v-html="heroData.title"></p>
+        <h1 class="title" v-html="heroData.title"></h1>
         <p class="des" v-html="heroData.des"></p>
     </div>
     <img src="../../../Assets/Img/hero/hero-background-people.png" alt="people" class="people">
