--- a/src/Components/Blocks/Joint/Joint.html
+++ b/src/Components/Blocks/Joint/Joint.html
@@ -1,19 +1,6 @@
 <div id="Joint">
-    <p>Hellow from Joint</p>
-    <p>Hellow from Joint</p>
-    <p>Hellow from Joint</p>
-    <p>Hellow from Joint</p>
-    <p>Hellow from Joint</p>
-    <p>Hellow from Joint</p>
-    <p>Hellow from Joint</p>
-    <p>Hellow from Joint</p>
-    <p>Hellow from Joint</p>
-    <p>Hellow from Joint</p>
-    <p>Hellow from Joint</p>
-    <p>Hellow from Joint</p>
-    <p>Hellow from Joint</p>
-    <p>Hellow from Joint</p>
-    <p>Hellow from Joint</p>
-    <p>Hellow from Joint</p>
-    <p>Hellow from Joint</p>
+    <div class="contentWrap">
+        <h2 class="title"><span class="title__arrow"></span><span class="title__text" v-html="jointData.title"></span></h2>
+        <h3 class="subTitle" v-html="jointData.subTitle"></h3>
+    </div>
 </div>
