--- a/src/Components/Layouts/Header/Header.scss
+++ b/src/Components/Layouts/Header/Header.scss
@@ -30,11 +30,11 @@
         vertical-align: middle;
         display: flex;
         align-items: center;
+        border-bottom: 1px solid $white;
         &.active, &:hover {
           color: $primaryColor;
           text-decoration: none;
           border-bottom: 1px solid $secondaryColor;
-          padding-bottom: 3px;
         }
 
         .pdfIcon {
@@ -70,8 +70,8 @@
     }
   
     &__menuToggle {
-      width: 24px;
-      height: 18px;
+      width: 26px;
+      height: 20px;
       background: url('../../../Assets/Img/icons/icon-menu.svg') no-repeat center;
       cursor: pointer;
       display: block;
