absolute positioning replaced with flex

--- a/src/Components/Blocks/Hero/Hero.html
+++ b/src/Components/Blocks/Hero/Hero.html
@@ -3,5 +3,7 @@
         <h1 class="title" v-html="heroData.title"></h1>
         <p class="des" v-html="heroData.des"></p>
     </div>
-    <img src="../../../Assets/Img/hero/hero-background-people.png" alt="people" class="people">
+    <div class="hero__image">
+        <img src="../../../Assets/Img/hero/hero-background-people.png" alt="people" class="people">
+    </div>
 </div>
