--- a/src/Components/Blocks/Hero/Hero.scss
+++ b/src/Components/Blocks/Hero/Hero.scss
@@ -1,8 +1,9 @@
 .hero {
     width: 100%;
     height: 263px;
-    position: relative;
     background: url('../../../Assets/Img/hero/hero-background-lg.jpg') no-repeat;
+    display: flex;
+    justify-content: space-between;
 
     @include media('<tablet') {
         height: 230px;
@@ -11,59 +12,18 @@
         height: auto;
         background: url('../../../Assets/Img/hero/hero-background-sm.jpg') no-repeat;
         background-size: cover;
-        padding-top: 55px;
-    }
-
-    .people {
-        position: absolute;
-        bottom: 0;
-        right: 59px;
-        width: 25%;
-
-        @include media('<smallDesktop') {
-            width: 26%;
-        }
-        @include media('<bigTabletMedium') {
-            width: 29%;
-        }
-        @include media('<tablet') {
-            width: 30%;
-            right: 39px;
-        }
-        @include media('<=phone') {
-            width: 34%;
-            right: 10px;
-        }
-        // @include media('<=smallPhone') {
-        //     width: 100%;
-        //     right: 15px;
-        // }
-        @include media('<=smallPhone') {
-            position: static;
-            width: 95%;
-            margin-bottom: -6px;
-            margin-right: 15px;
-        }
+        flex-direction: column;
     }
 
     &__text {
-        position: absolute;
-        top: 55px;
-        left: 0;
-        max-width: 586px;
+        max-width: 617px;
+        padding-top: 48px;
 
         @include media('<tablet') {
-            max-width: 486px;
-        }
-        @include media('<=phone') {
             max-width: 386px;
         }
-        // @include media('<=smallPhone') {
-        //     max-width: 90%;
-        // }
         @include media('<=smallPhone') {
-            max-width: 99%;
-            position: static;
+            max-width: 100%;
             margin-bottom: 15px;
         }
 
@@ -80,12 +40,7 @@
             width: auto;
 
             @include media('<tablet') {
-                font-size: $fontSize30;
-                padding: 10px 64.5px 10px 35px;
-                margin-bottom: 18px;
-            }
-            @include media('<=phone') {
-                font-size: $fontSize24;
+                font-size: $fontSize20;
                 padding: 6px 34.5px 6px 15px;
                 margin-bottom: 10px;
             }
@@ -106,11 +61,6 @@
             margin-left: 48px;
 
             @include media('<tablet') {
-                font-size: $fontSize20;
-                max-width: 460px;
-                margin-left: 28px;
-            }
-            @include media('<=phone') {
                 font-size: $fontSize18;
                 max-width: 350px;
                 margin-left: 18px;
@@ -119,6 +69,30 @@
                 font-size: $fontSize20;
                 max-width: 90%;
             }
+        }
+    }
+
+    &__image {
+        max-width: 420px;
+        padding-right: 59px;
+        display: flex;
+
+        .people {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        @include media('<tablet') {
+            padding-right: 39px;
+        }
+        @include media('<=phone') {
+            padding-right: 10px;
+            max-width: none;
+        }
+        @include media('<=smallPhone') {
+            padding-right: 15px;
+            width: 100%;
         }
     }
 }
