--- a/src/Styles/Helpers/_variables.scss
+++ b/src/Styles/Helpers/_variables.scss
@@ -70,11 +70,16 @@ $lineHeight150: 150%;
 $white: #ffffff;
 $black: #000000;
 $bodyCopy: #212121;
+$des: #161616;
+$listItem: rgba(22, 22, 22, 0.80);
 $primaryColor: #49A942;
 $primaryColorAlpha07: #49a94267;
 $secondaryColor: #33632E;
 $acentColor: rgba(255, 255, 255, 0.30);
 $sectionBg: rgba(73, 169, 66, 0.05);
 $bdr: #BDBDBD;
+$graphBdr: rgba(51, 99, 46, 0.17);
 $logoBdr: #E8E8E8;
+$graphBg: #F6FBF6;
 $textShadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.25);
+$graphShadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.10);
