--- a/src/Styles/Helpers/_variables.scss
+++ b/src/Styles/Helpers/_variables.scss
@@ -53,6 +53,7 @@ $fontSize55: 55px;
 $lineHeight14: 14px;
 $lineHeight15: 15px;
 $lineHeight18: 18px;
+$lineHeight19: 19px;
 $lineHeight22: 22px;
 $lineHeight23: 23px;
 $lineHeight24: 24px;
@@ -77,6 +78,7 @@ $primaryColorAlpha07: #49a94267;
 $secondaryColor: #33632E;
 $acentColor: rgba(255, 255, 255, 0.30);
 $sectionBg: rgba(73, 169, 66, 0.05);
+$liBg: rgba(73, 169, 66, 0.075);
 $bdr: #BDBDBD;
 $graphBdr: rgba(51, 99, 46, 0.17);
 $logoBdr: #E8E8E8;
