--- a/src/Components/Blocks/Access/Access.scss
+++ b/src/Components/Blocks/Access/Access.scss
@@ -1,4 +1,53 @@
 #Access {
-    padding: 23px 0 23px;
-    background-color: $white;
+  padding: 23px 0 23px;
+  background-color: $white;
+
+  .des {
+    color: $listItem;
+    font-size: $fontSize18;
+    font-weight: $fontWeightNormal;
+    line-height: $lineHeight140;
+
+    &:nth-of-type(3) {
+      margin-top: 15px;
+    }
+
+    @include media("<phone") {
+      font-size: $fontSize16;
+    }
+  }
+
+  ul {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 18px;
+    margin-bottom: 30px;
+    list-style-type: disc;
+    list-style-position: inside;
+    padding-left: 7px;
+
+    li {
+      flex: 49%;
+      max-width: 510px;
+      border-radius: 10px;
+      background: $liBg;
+      padding: 23px 18px;
+      color: $des;
+      font-size: $fontSize16;
+      font-weight: $fontWeightMedium;
+      line-height: $lineHeight19;
+
+      &:marker {
+        color: $primaryColor;
+      }
+    }
+  }
+
+  .footnote {
+    color: $des;
+    font-size: $fontSize12;
+    font-weight: $fontWeightNormal;
+    line-height: $lineHeight140;
+    margin-top: 20px;
+  }
 }
