added headerTop from scratch, adding header

--- a/src/Components/Layouts/Header/HeaderTop.scss
+++ b/src/Components/Layouts/Header/HeaderTop.scss
@@ -1,43 +1,34 @@
-.headerTopWrap{
-    background: $white;
-    max-width: 1440px;
-    margin: 0 auto;
-    position: relative;
-    z-index: 99;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    left: 0;
-    right: 0;
-    border-bottom: solid 1px $bdr;
-  }
-  
-  .headerTop {
-    display: flex;
+.headerTop {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 16px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  border-bottom: 1px solid $headerTopBdr;
+  background: $white;
+
+  @include media("<phone") {
     padding: 10px 16px;
-    align-items: center;
-    justify-content: space-between;
-    background: $white;
-    @include media('>tablet'){
-      padding: 10px 20px;
-    }
-    img{
-      display: block;
-      &:first-child{
-        width: 178px;
-        height: 15px;
-        @include media('>tablet'){
-          width: 219px;
-          height: 18px;
-        }
-      }
-      &:last-child{
-        width: 106px;
-        height: 18px;
-        @include media('>tablet'){
-          width: 139px;
-          height: 24px;
-        }
-      }
-    }  
   }
+
+  img:nth-of-type(1) {
+    width: 219px;
+    height: 18px;
+
+    @include media("<phone") {
+      width: 178px;
+      height: 15px;
+    }
+  }
+  img:nth-of-type(2) {
+    width: 139px;
+    height: 24px;
+
+    @include media("<phone") {
+      width: 106px;
+      height: 18px;
+    }
+  }
+}
