--- a/src/Styles/Helpers/_variables.scss
+++ b/src/Styles/Helpers/_variables.scss
@@ -80,6 +80,7 @@ $acentColor: rgba(255, 255, 255, 0.30);
 $sectionBg: rgba(73, 169, 66, 0.05);
 $liBg: rgba(73, 169, 66, 0.075);
 $bdr: #BDBDBD;
+$headerTopBdr: #C5C5C5;
 $graphBdr: rgba(51, 99, 46, 0.17);
 $logoBdr: #E8E8E8;
 $graphBg: #F6FBF6;
