--- a/src/Components/Blocks/ACR/ACR.scss
+++ b/src/Components/Blocks/ACR/ACR.scss
@@ -2,6 +2,11 @@
   padding: 25px 0 28px;
   background-color: $white;
   border-bottom: 2px solid $primaryColor;
+  scroll-margin-top: 120px;
+
+  @include media('<=tablet') {
+    scroll-margin-top: 145px;
+  }
 
   .des {
     color: $des;
