--- a/src/Styles/Helpers/_variables.scss
+++ b/src/Styles/Helpers/_variables.scss
@@ -86,3 +86,4 @@ $logoBdr: #E8E8E8;
 $graphBg: #F6FBF6;
 $textShadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.25);
 $graphShadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.10);
+$headerShadow: 0px 4px 22px 0px rgba(0, 0, 0, 0.10);
