--- a/src/Components/Layouts/Header/Header.scss
+++ b/src/Components/Layouts/Header/Header.scss
@@ -60,6 +60,11 @@
                 border-bottom: 1px solid $secondaryColor;
                 cursor: pointer;
             }
+
+            &.active{
+                color: $primaryColor;
+                border-bottom: 1px solid $secondaryColor;
+            }
         }
         li:nth-of-type(1) {
             margin-left: 0;
