--- a/src/Components/Layouts/Brand/BrandFooter.scss
+++ b/src/Components/Layouts/Brand/BrandFooter.scss
@@ -1,4 +1,3 @@
-
 .brandFooter {
     background: $white;
   
@@ -41,6 +40,30 @@
         text-align: center;
         @include media('>=phone'){
           text-align: left;
+        }
+
+        nav {
+          width: 100%;
+          ul {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+
+            li {
+              border-bottom: 1px solid $white;
+            }
+
+            li:hover {
+              cursor: pointer;
+              border-bottom: 1px solid $secondaryColor;
+            }
+
+            .active {
+              border-bottom: 1px solid $secondaryColor;
+              color: $primaryColor;
+            }
+          }
+      
         }
       }
     }
