--- a/src/Components/Layouts/Brand/BrandFooter.scss
+++ b/src/Components/Layouts/Brand/BrandFooter.scss
@@ -1,69 +1,34 @@
 .brandFooter {
     background: $white;
-  
+
     &__upperContent {
-      padding: 24px 0;
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-      @include media('>=phone'){
-        flex-direction: row;
-  
-      }
-      @include media('>tablet') {
-        padding: 32px 0;
-      }
       p {
-        color: $bodyCopy;
-        font-size: $fontSize16;
-        line-height: $lineHeight135;
-        &:last-child{
-          margin-top: 2px;
+        color: $listItem;
+        font-size: $fontSize15;
+        font-weight: $fontWeightNormal;
+        line-height: $lineHeight23;
+        margin: 10px 0;
+
+        &:nth-of-type(1) {
+          margin: 30px 0 10px;
+        }
+
+        &:nth-of-type(4) {
+          margin: 10px 0 20px;
         }
       }
-      .upperLeft{
+
+      .logo {
+        width: 217px;
         margin-bottom: 20px;
-        @include media('>=phone'){
-          margin-right: 40px;
-          margin-bottom: 0;
-        }
-        @include media('>tablet') {
-          margin-right: 50px;
-        }
-        img{
-          display: block;
-          width: 122px;
-          height: 59px;
-        }
-      }
-      .upperRight{
-        text-align: center;
-        @include media('>=phone'){
-          text-align: left;
-        }
-
-        nav {
+        img {
           width: 100%;
-          ul {
-            display: flex;
-            justify-content: space-between;
-            width: 100%;
+          object-fit: cover;
+        }
 
-            li {
-              border-bottom: 1px solid $white;
-            }
-
-            li:hover {
-              cursor: pointer;
-              border-bottom: 1px solid $secondaryColor;
-            }
-
-            .active {
-              border-bottom: 1px solid $secondaryColor;
-              color: $primaryColor;
-            }
-          }
-      
+        @include media('<=tablet') {
+          width: 194px;
+          margin-bottom: 15px;
         }
       }
     }
