--- a/src/Styles/Helpers/_variables.scss
+++ b/src/Styles/Helpers/_variables.scss
@@ -84,6 +84,7 @@ $headerTopBdr: #C5C5C5;
 $graphBdr: rgba(51, 99, 46, 0.17);
 $logoBdr: #E8E8E8;
 $graphBg: #F6FBF6;
+$isiBdr: rgba(0, 0, 0, 0.10);
 $textShadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.25);
 $graphShadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.10);
 $headerShadow: 0px 4px 22px 0px rgba(0, 0, 0, 0.10);
