added footer in isi

--- a/src/Components/Layouts/Header/Header.scss
+++ b/src/Components/Layouts/Header/Header.scss
@@ -3,6 +3,7 @@
   top: 35px;
   background: $white;
   box-shadow: $headerShadow;
+  max-width: $mainWrapper;
   width: 100%;
 
   @include media('<=phone'){
