--- a/src/Components/Layouts/Header/HeaderTop.scss
+++ b/src/Components/Layouts/Header/HeaderTop.scss
@@ -5,6 +5,7 @@
   padding: 5px 16px;
   position: fixed;
   top: 0;
+  max-width: $mainWrapper;
   width: 100%;
   border-bottom: 1px solid $headerTopBdr;
   background: $white;
